[package]
name = "mlpboost"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lycaon     = { path = "./../lycaon" }
serde      = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
grb        = "*"
rayon      = "*"
polars     = { git = "https://github.com/pola-rs/polars" }
