[package]
name = "time"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mlpboost   = { path = "./../mlpboost" }
lycaon     = { path = "./../lycaon" }
# lycaon     = { git = "https://github.com/rmitsuboshi/lycaon" }
polars     = { git = "https://github.com/pola-rs/polars" }

